tests/lime/pass/bugs/args/jz_macro.wsa
    push 1
    jz macro hello [push 2] .hello
    hello
.hello:
