tests/lime/fail/tokens/macro_first/byte_55.wsa
macro 7 [push 55] 7
